PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
? ? ??? 2002, Version 4.3.0
- Added wddx_serialize_type(). Allows users to cast values to WDDX types (jan)
- Added ob_flush_all() that flushes all buffers. (Yasuo)
- Added ob_get_clean() and og_get_flush(). (Yasuo)
- ATTENTION! "make install" will *by default* install the CLI SAPI binary in 
  {PREFIX}/bin/php. If you don't disable the CGI binary, it will be
  installed as {PREFIX}/bin/php-cgi.
- Added ftp_ssl_connect() to ext/ftp for FTP over SSL support. (Stefan Esser)
- Made a few additions and changes to Apache 2 sapi. (Ilia)
  . Added apache_response_headers(), apache_note(), apache_getenv() and 
    apache_setenv() functions.
  . Added more detailed error reporting to apache_lookup_uri() and virtual().
  . Renamed getallheaders() to apache_request_headers() and made an alias for BC.
  . Added php_apache_sapi_getenv() and php_apache_sapi_get_stat().
- Fixed strstr(), strchr() and strrchr() to be binary safe. (Andrey)
- Added array_diff_assoc() and array_intersect_assoc(). (Andrey)
- Fixed bug #17825 (ob_start() chunk size option didn't work well). (Yasuo)
- Fixed output buffer infinate loop when buffer_size became 0. (Marcus, Wez)
- Fixed output buffering implicit flush. (Yasuo) 
- Added getopt() for parsing command line options and arguments. (Jon)
- Added pg_fetch_assoc(), pg_fetch_all(), pg_ping(), pg_meta_data(), pg_convert(), 
  pg_insert(), pg_select(), pg_update(), pg_delete(), pg_result_seek() and
  pg_unescape_bytea(). (Yasuo)
- Fixed bug #17281 (Sanity checks for encoding sessions). (Ilia)
- Fixed bug #16995 and #19392 (Prevent crash if $HTTP_SESSION_VARS != ARRAY).
  (Ilia)
- Fixed bug #19292 (open_basedir restriction problem). (Rasmus)
- Fixed bug #19366 (gdImageFill crashes when x & y are outside of 
  the image's boundries). (Ilia)