@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: build-defs.h.in,v 1.10 2002/06/07 12:19:26 ssb Exp $ */
+/* $Id: build-defs.h.in,v 1.11 2002/10/04 04:47:34 rasmus Exp $ */
 
 #define CONFIGURE_COMMAND "@CONFIGURE_COMMAND@"
 #define PHP_ADA_INCLUDE		""
@@ -87,4 +87,5 @@
 #define PHP_SYSCONFDIR          "@EXPANDED_SYSCONFDIR@"
 #define PHP_LOCALSTATEDIR       "@EXPANDED_LOCALSTATEDIR@"
 #define PHP_CONFIG_FILE_PATH    "@EXPANDED_PHP_CONFIG_FILE_PATH@"
+#define PHP_CONFIG_FILE_SCAN_DIR    "@EXPANDED_PHP_CONFIG_FILE_SCAN_DIR@"
 #define PHP_SHLIB_SUFFIX        "@SHLIB_SUFFIX_NAME@"
